EOR-51 Show "Promotion" badge on PLP

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -428,4 +428,5 @@
     <string name="format_percent">%d%%</string>
     <string name="format_get_more_percent">Extra %d%% Off</string>
     <string name="title_credit_card_on_top">Credit card on-top promotion discount when create full payment</string>
+    <string name="badge_promotion">Promotion</string>
 </resources>
