--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -409,4 +409,5 @@
     <string name="format_percent">%d%%</string>
     <string name="format_get_more_percent">ลดเพิ่ม %d%%</string>
     <string name="title_credit_card_on_top">ส่วนลดเพิ่มบัตรเครดิตเมื่อจ่ายเต็มจำนวน</string>
+    <string name="badge_promotion">โปรโมชั่น</string>
 </resources>
