--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -427,7 +427,9 @@
     <string name="format_credit_card_promotion_percent">Enjoy additional %d%% off!</string>
     <string name="format_credit_card_promotion">Enjoy additional %d฿ off!</string>
     <string name="format_percent">%d%%</string>
+    <string name="format_bath">%d฿</string>
     <string name="format_get_more_percent">Extra %d%% Off</string>
+    <string name="format_get_more_bath">Extra %d฿ Off</string>
     <string name="title_credit_card_on_top">Credit card on-top promotion discount when create full payment</string>
     <string name="badge_promotion">Promotion</string>
 
