--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -437,4 +437,5 @@
     <string name="zero_percent">0%</string>
     <string name="title_installment_plans">Installment plans</string>
     <string name="badge_installment_plan">Installment</string>
+    <string name="month">months</string>
 </resources>
