--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -412,7 +412,7 @@
 
     <!--  Promotion freebie  -->
     <string name="badge_free_item">Free Item</string>
-    <string name="get_free_item">Free items with this product:</string>
+    <string name="get_free_item">Free items with this product</string>
     <string name="free">FREE</string>
     <string name="freebie_promotion_not_found">No promotion for this product</string>
     <string name="freebie_out_of_stock">OUT OF STOCK</string>
