EOR-145 [OmniTV] Improve performance to show "Available Here" on PLP

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -382,5 +382,6 @@
     <string name="acknowledged">และรับทราบ</string>
     <string name="privacy">นโยบายความเป็นส่วนตัว</string>
     <string name="available_here">มีขายที่สาขานี้</string>
+    <string name="available_here_badge">มีขายที่สาขานี้</string>
 
 </resources>
