Update string en about filter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -417,5 +417,5 @@
     <string name="filter_by">Filter by</string>
     <string name="reset_filter">Reset</string>
     <string name="format_add_filter">Apply (%d items)</string>
-    <string name="filters">Filter</string>
+    <string name="filters">Filters</string>
 </resources>
