--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -411,7 +411,7 @@
     <string name="format_bath">%d฿</string>
     <string name="format_get_more_percent">ลดเพิ่ม %d%%</string>
     <string name="format_get_more_bath">ลดเพิ่ม %d฿</string>
-    <string name="title_credit_card_on_top">ส่วนลดเพิ่มบัตรเครดิตเมื่อจ่ายเต็มจำนวน</string>
+    <string name="title_credit_card_on_top">ส่วนลดเพิ่มบัตรเครดิตกับธนาคารที่ร่วมรายการ</string>
     <string name="badge_promotion">โปรโมชั่น</string>
 
     <!--  Installment  -->
