EOR-212 Update string about pay counter service

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -382,7 +382,7 @@
     <string name="pay_now">Pay now</string>
     <string name="order_click_bill_description">Click to send a barcode to the customer</string>
     <string name="pay_bill">Pay bill</string>
-    <string name="pay_by_bank_transfer">Bank Transfer</string>
+    <string name="pay_by_bank_transfer">Bank Transfer/Counter Service</string>
     
     <!--  PDPA  -->
     <string name="accept">By clicking the button, you accept the</string>
